# visionpro

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/skills/branch/: SKILL.md
.claude/skills/cleanup/: SKILL.md
.claude/skills/deploy-check/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/preview/: SKILL.md
.claude/skills/security-scan/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/middleware/: auth.py  rate_limiter.py  security.py
backend/models/: schemas.py
backend/routers/: health.py  websocket.py
backend/services/: circuit_breaker.py  drowsiness_detector.py  emotion_detector.py  frame_processor.py  hand_detector.py
backend/tests/: conftest.py  test_auth.py  test_circuit_breaker.py  test_frame_processor.py  test_health.py  test_image_utils.py  test_rate_limiter.py  test_schemas.py
backend/utils/: image_utils.py
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CameraFeed.tsx  ConnectionStatus.test.tsx  ConnectionStatus.tsx  DrawingControls.tsx  EmotionOverlay.test.tsx  EmotionOverlay.tsx  FeatureToggles.test.tsx  FeatureToggles.tsx  LibrasOverlay.tsx  LoadingOverlay.tsx  (+2 more)
(+13 files in other folders)
